--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
 		"@vue/cli-plugin-babel": "^4.5.10",
 		"@vue/cli-service": "^4.5.10",
 		"cross-env": "^7.0.3",
+		"eslint": "^7.27.0",
+		"eslint-plugin-vue": "^7.10.0",
 		"minimist": "^1.2.5",
 		"rollup": "^2.36.1",
 		"rollup-plugin-terser": "^7.0.2",
